--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -3,8 +3,8 @@ body > footer {
     // variables d'animation
     @keyframes squish {
         from, to { transform: scale(1, 1); }
-        20% { transform: scale(0.85, 1.15); }
-        40% { transform: scale(1.15, 0.85); }
+        20% { transform: scale(0.9, 1.1); }
+        40% { transform: scale(1.1, 0.9); }
         60% { transform: scale(0.9, 1.1); }
         80% { transform: scale(1.1, 0.9); }
     }
@@ -44,7 +44,7 @@ body > footer {
                     transition: .3s;
                 }
                 a:hover {
-                    padding-left: .5rem;
+                    transform: translate(10px);
                 }
             }
     
