--- a/styles/pages/_critique-pages.scss
+++ b/styles/pages/_critique-pages.scss
@@ -33,16 +33,37 @@
     
     &>main {
         padding: 0 var(--padding-desktop-horizontal);
-
+        display: flex;
+        flex-wrap: wrap;
         h1 {
             font-size: var(--typescale-h3);
             font-weight: 700;
         }
+        .filtre1{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            order: 1;
+            align-self: center;
+            width: 100%;
+            padding: 25px;
+
+        }
+        .filtre2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            order: 2;
+            padding: 25px;
+            position: sticky;
+        }
         &>section{
             display: flex;
+            flex-direction: row;
             width: 70%;
             flex-wrap: wrap;
             justify-content: flex-end;
+            order: 3;
             // Teintes de violet (bg) alternées entre chaque commentaire
             &>article:nth-child(even){
                 background-color: rgba(var(--color-primary), 0.8);
@@ -192,13 +213,6 @@
                 background-color: red;
                 visibility: hidden;
             }
-
-
         }
-
-
     }
-
-
-
 }
