debut images cadres de saisons

--- a/styles/pages/_presentation_toutes_les_saisons.scss
+++ b/styles/pages/_presentation_toutes_les_saisons.scss
@@ -76,16 +76,28 @@
                 // poster + légende
                 &>figure {
 
-                    img {
-                        width: auto;
-                        max-height: 12rem;
+                    div {
+
+                        position: relative;
+
+                        img {
+                            width: auto;
+                            max-height: 12rem;
+                        }
+
+                        svg {
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            transform: translate(-50%, -50%);
+                        }
                     }
 
                     figcaption {
                         display: flex;
                         width: 100%;
                         justify-content: space-between;
-                    }
+                    }    
                 }
     
                 // bouton REGARDER
