--- a/styles/pages/_critique-pages.scss
+++ b/styles/pages/_critique-pages.scss
@@ -1,11 +1,8 @@
 #body_page_critique {
 
-    @keyframes pulse{
-        50%  {transform: scale(1.2);}
-    }
-
     // FORMAT DESKTOP
     header{
+
         & > div{
             display: flex;
             direction: row;
@@ -16,7 +13,7 @@
                     font-size: 4em;
                     text-align: center;
                     margin-bottom: 1px;
-                    color: #CE91FA;
+                    color: rgb(var(--color-primary));
                 }
 
                 & > hr{
@@ -32,184 +29,229 @@
     }
     
     &>main {
+
+        a, details {
+            background-color: rgb(var(--color-accent));
+            color: white;
+            border: 1px black solid;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
         padding: 0 var(--padding-desktop-horizontal);
         display: flex;
-        flex-wrap: wrap;
-        h1 {
-            font-size: var(--typescale-h3);
-            font-weight: 700;
-        }
-        .filtre1{
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            order: 1;
-            align-self: center;
-            width: 100%;
-            padding: 25px;
-            position: sticky;
-            top: 1rem;
-            z-index: 2;
-        }
+
         .filtre2{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            order: 2;
-            padding: 25px;
-            position: sticky;
-            top: 50%;
-            transform: translateY(-50%);
-            left: 3rem;
-            &>details{
-                display: flex;
-                flex-direction: column;
-            }
-        }
-        &>section{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            position: relative;
-            left: 15rem;
-            order: 3;
-            // Teintes de violet (bg) alternées entre chaque commentaire
-            &>article:nth-child(even){
-                background-color: rgba(var(--color-primary), 0.8);
-            }
-            &>article:nth-child(odd) {
-                background-color: rgb(var(--color-primary));
-            }
+            flex-grow: 0;
+            flex-shrink: 1;
 
-            // Style global des cadres des commentaires
-            &>article {
-                color: black;
-
+            &>div {
                 padding: 1rem;
-                margin: 2.5rem 0;
-                box-sizing: border-box;
-                width: 450px;
-
-                display: flex;
-                gap: 2rem;
-
+                background-color: rgb(var(--color-primary));
                 border-radius: var(--border-radius);
 
-                // Deux parties
-                &>div {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                position: sticky;
+                top: 4rem;
+
+                a:first-child {
+                    display: flex;
+                    gap: .5rem;
+                    padding: .5rem;
+
+                    img {
+                        transform: scale(.6);
+                    }
+                }
+
+                &>details{
                     display: flex;
                     flex-direction: column;
+                    gap: 5rem;
+                }    
+            }
+        }
 
-                    gap: 1rem;
+        &>div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-                    a:hover {
-                        cursor: pointer;
-                    }
+            flex-grow: 2;
+
+            padding: 0;
+
+            // boutons public/presse
+            .filtre1{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                gap: 1rem;
+                background-color: rgb(var(--color-primary));
+
+                margin: 0;
+                padding: 1rem;
+                border-radius: var(--border-radius);
+
+                position: sticky;
+                top: 4rem;
+                z-index: 2;
+            }
+
+
+            // Style global des cadres des commentaires
+            &>section {
+
+                padding: .5rem;
+
+                // Teintes de violet (bg) alternées entre chaque commentaire
+                &>article:nth-child(even){
+                    background-color: rgba(var(--color-primary), 0.8);
+                }
+                &>article:nth-child(odd) {
+                    background-color: rgb(var(--color-primary));
                 }
 
-                // Partie de gauche
-                &>div:first-child {
+                display: flex;
+                width: 100%;
+                justify-content: center;
+                gap: 1rem;
 
-                    flex-basis: 15%;
-                    flex-shrink: 0;
-                    flex-grow: 0;
+                &>article {
+                    color: black;
+                    background-color: rgb(var(--color-primary));
 
-                    align-items: center;
-                    justify-content: space-between;
+                    padding: 1rem;
+                    margin: 2.5rem 0;
+                    box-sizing: border-box;
+                    width: 450px;
 
-                    // N° saison
-                    &>p:first-child {
+                    display: flex;
+                    gap: 2rem;
 
-                        padding: 0 2rem;
-                        border-radius: var(--border-radius);
-                        background-color: white;     
-                    }
+                    border-radius: var(--border-radius);
 
-                    // poster + légende
-                    &>figure {
-
-                        figcaption {
-                            display: flex;
-                            width: 100%;
-                            justify-content: space-between;
-                        }
-                    }
-        
-                    // bouton REGARDER
-                    &>a {
-                        color: white;
-                        padding: 0 1rem;
-
-                        transition: 0.5s;
-        
-                        background-color: rgb(var(--color-accent-dark));
-                        border-radius: var(--border-radius);
-
-                        &:hover {
-                            left: 300px;
-                            box-shadow: inset 10rem 0 0 0 rgb(var(--color-primary-dark));
-                        }
-
-                    }
-                }
-
-                // Partie de droite (résumé)
-                &>div:last-child {
-
-                    flex-grow: 1;
-                    
-                    .text-zone{
-
+                    // Deux parties
+                    &>div {
                         display: flex;
                         flex-direction: column;
-                        justify-content: space-between;
-                        flex-grow: 1;
-                        gap: 0.5rem;
 
-                        hr {
-                            border: 1px solid black;
-                            width: 80%;
-                        }
-
-                        // texte
-                        p {
-                            display: none;
-                        }
-
-                        p.active {
-                            display: block;
-                        }
-                    }
-
-                    // Mentions en bas
-                    &>div{
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-                        flex-grow: 0;
-                    }
-
-                    // mentions en bas, à gauche
-                    &>div>div {
-                        display: flex;
-                        align-items: center;
                         gap: 1rem;
 
-                        button {
-                            transition: 0.2s;
-                        }
-                        
-                        button:hover {
+                        a:hover {
                             cursor: pointer;
-                            transform: rotate(8deg);
-                        }
-
-                        button.active {
-                            background-color: rgb(var(--color-accent-dark));
                         }
                     }
-                }      
+
+                    // Partie de gauche
+                    &>div:first-child {
+
+                        flex-basis: 15%;
+                        flex-shrink: 0;
+                        flex-grow: 0;
+
+                        align-items: center;
+                        justify-content: space-between;
+
+                        // N° saison
+                        &>p:first-child {
+
+                            padding: 0 2rem;
+                            border-radius: var(--border-radius);
+                            background-color: white;     
+                        }
+
+                        // poster + légende
+                        &>figure {
+
+                            figcaption {
+                                display: flex;
+                                gap: 1rem;
+                                width: 100%;
+                                justify-content: space-between;
+                            }
+                        }
+            
+                        // bouton REGARDER
+                        &>a {
+                            color: white;
+                            padding: 0 1rem;
+
+                            transition: 0.5s;
+            
+                            background-color: rgb(var(--color-accent-dark));
+                            border-radius: var(--border-radius);
+
+                            &:hover {
+                                left: 300px;
+                                box-shadow: inset 10rem 0 0 0 rgb(var(--color-primary-dark));
+                            }
+
+                        }
+                    }
+
+                    // Partie de droite (résumé)
+                    &>div:last-child {
+
+                        flex-grow: 1;
+                        
+                        .text-zone{
+
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                            flex-grow: 1;
+                            gap: 0.5rem;
+
+                            hr {
+                                border: 1px solid black;
+                                width: 80%;
+                            }
+
+                            // texte
+                            p {
+                                display: none;
+                            }
+
+                            p.active {
+                                display: block;
+                            }
+                        }
+
+                        // Mentions en bas
+                        &>div{
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            flex-grow: 0;
+                        }
+
+                        // mentions en bas, à gauche
+                        &>div>div {
+                            display: flex;
+                            align-items: center;
+                            gap: 1rem;
+
+                            button {
+                                transition: 0.2s;
+                            }
+                            
+                            button:hover {
+                                cursor: pointer;
+                                transform: rotate(8deg);
+                            }
+
+                            button.active {
+                                background-color: rgb(var(--color-accent-dark));
+                            }
+                        }
+                    }
+                }     
             }
         }
     }
