--- a/styles/pages/_style_backstage.scss
+++ b/styles/pages/_style_backstage.scss
@@ -41,7 +41,7 @@
     main{
         padding: 0 var(--padding-desktop-horizontal);
 
-        /**paramètres de tout les articles*/
+        /**paramètres de tous les articles*/
         article{
             margin: 3rem 1.5rem;
             border-radius: 10px;
@@ -63,6 +63,10 @@
                 width: 0;
                 height: 2.5rem;
                 margin: 1rem 1rem 0 1rem;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
 
             details{
