fixation de tous les problèmes rencontré lors du build

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 // Load fonts and variables
 @import "abstracts/variables";
-@import "./fonts/switzer";
-@import "./fonts/archivo";
+@import "fonts/switzer";
+@import "fonts/archivo";
 
 // Main styles
 ::-webkit-scrollbar {
