--- a/styles/pages/_critique-pages.scss
+++ b/styles/pages/_critique-pages.scss
@@ -274,7 +274,36 @@
 
     // FORMAT RESPONSIVE TELEPHONE
     @media screen and (max-width: 728px) {
+        /**HEADER*/
+        header{
+
+            padding: 0;
+            margin: 0;
+    
+            /**le logo disparaît*/
+            svg{
+                display: none;
+            }
+
+            & > div{
+                padding: 0;
+
+                & > div{
+                    margin: 0 0 0 1.5rem;
+                    padding: 0;
+    
+                    /**réduction des polices*/
+                    & > h1{
+                        font-size: 3.3rem;
+                    }
         
+                    & > h2{
+                        font-size: 3.3rem;
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }    
     main {     
             display: flex;
             flex-direction: column;
