--- a/styles/pages/_critique-pages.scss
+++ b/styles/pages/_critique-pages.scss
@@ -8,7 +8,6 @@
             direction: row;
             & > div{
                 align-items: center;
-                margin-left: 5em;
                 & > h2{
                     font-size: 4em;
                     text-align: center;
@@ -47,24 +46,12 @@
             font-size: var(--typescale-h3);
             font-weight: 700;
         }
-        .filtre1{
-            display: flex;
-            flex-direction: row;
-            justify-content: right;
-            order: 1;
-            align-self: center;
-            width: 100%;
-            padding: 25px;
-            position: sticky;
-            top: 1rem;
-            z-index: 2;
-        }
         .filtre2{
             flex-grow: 0;
             flex-shrink: 1;
 
             &>div {
-                padding: 1rem;
+                padding: .5rem;
                 background-color: rgb(var(--color-primary));
                 border-radius: var(--border-radius);
 
@@ -101,7 +88,16 @@
             flex-grow: 2;
 
             padding: 0;
-
+            header{
+                width: 30%;
+                position: sticky;
+                top: 4rem;
+                z-index: 2;
+                order: -1;
+                .filtre2{
+                    display: none;
+                }
+            }
             // boutons public/presse
             .filtre1{
                 display: flex;
@@ -113,10 +109,6 @@
                 margin: 0;
                 padding: 1rem;
                 border-radius: var(--border-radius);
-
-                position: sticky;
-                top: 4rem;
-                z-index: 2;
             }
 
 
@@ -273,7 +265,7 @@
     }
 
     // FORMAT RESPONSIVE TELEPHONE
-    @media screen and (max-width: 728px) {
+    @media screen and (max-width: 428px) {
         /**HEADER*/
         header{
 
@@ -289,7 +281,6 @@
                 padding: 0;
 
                 & > div{
-                    margin: 0 0 0 1.5rem;
                     padding: 0;
     
                     /**réduction des polices*/
@@ -304,21 +295,37 @@
                 }
             }
         }    
-    main {     
-            display: flex;
-            flex-direction: column;
-            .filtre2{
+
+
+    main {    
+            &>div:first-child{
+                display: none;
+            }
+
+            &>div:nth-child(2) {
+                align-items: start;
+            }
+            &>div:nth-child(2)>header{
                 display: flex;
-                flex-direction: row;
-                position: static;
+                gap: 20px;
+
+                &>.filtre2{
+                    display: flex;
+                    margin: 0;
+                }
+                &>.filtre1 {
+                    display: flex;
+                    flex-direction: column;
+                }
             }
             .filtre1{
                 position: static;
-                margin: 25px;
             }
             section{
                 position: relative;
                 left: 0rem;
+                display: flex;
+                flex-direction: column;
             }
             &>article {
                 width: 65%; // plus petit pour le responsive
